--- a/Stylesheet/style.css
+++ b/Stylesheet/style.css
@@ -113,7 +113,7 @@ html{
 }
 .sectionfirst:before{
     content: "";
-    background: rgba(255, 255, 255, 0.7);
+/*     background: rgba(255, 255, 255, 0.7); */
     /* background: rgb(55 52 52 / 75%); */
     position: absolute;
     bottom: 0;
